; ModuleID = '/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_signals.c_sig_soft_quit.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_signals.c_sig_soft_quit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@errno = common dso_local global i32 0, align 4
@fpm_globals = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@AF_UNIX = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4
@ZLOG_WARNING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"failed to create a new socket\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @sig_soft_quit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sig_soft_quit(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @errno, align 4
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @fpm_globals, i32 0, i32 0), align 4
  %6 = call i32 @close(i32 %5)
  %7 = load i32, i32* @AF_UNIX, align 4
  %8 = load i32, i32* @SOCK_STREAM, align 4
  %9 = call i64 @socket(i32 %7, i32 %8, i32 0)
  %10 = icmp sgt i64 0, %9
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load i32, i32* @ZLOG_WARNING, align 4
  %13 = call i32 @zlog(i32 %12, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  br label %14

14:                                               ; preds = %11, %1
  %15 = call i32 (...) @fpm_php_soft_quit()
  %16 = load i32, i32* %3, align 4
  store i32 %16, i32* @errno, align 4
  ret void
}

declare dso_local i32 @close(i32) #1

declare dso_local i64 @socket(i32, i32, i32) #1

declare dso_local i32 @zlog(i32, i8*) #1

declare dso_local i32 @fpm_php_soft_quit(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
